--- a/public/css/page_loading.css
+++ b/public/css/page_loading.css
@@ -2,6 +2,10 @@
     text-transform: uppercase!important;
 }
 
+.capitalize {
+    text-transform: capitalize!important;
+}
+
 .loading-brand {
     transition: all 0.4s;
     transform: scale(1);
