--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -5,7 +5,7 @@
     font-weight: 600;
     padding: 5px;
 }
-.timeline > div > .fa, .timeline > div > .fab, .timeline > div > .far, .timeline > div > .fas, .timeline > div > div > .fas, .timeline > div > .glyphicon, .timeline > div > .ion {
+.timeline > div > .fa, .timeline > div > .fab, .timeline > div > .far, .timeline > div > .fas ,.timeline > div > .far, .timeline > div > div > .fas, .timeline > div > div > .far, .timeline > div > .glyphicon, .timeline > div > .ion {
     background: #adb5bd;
         background-color: rgb(173, 181, 189);
     border-radius: 50%;
