--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,11 +1,20 @@
 body {
   min-height: 100vh;
+  height: 100%;
   padding-top: 4.5rem;
+  background-image: url('/images/grisclaro.png')!important;
+  background-position: center!important;
+  background-size: contain!important;
+  background-repeat: repeat!important;
 }
 
 /* 
   Global
 */
+
+.fondo {
+  min-height: 100vh;
+}
 
 .logo {
   width: 30px;
@@ -153,3 +162,42 @@ body {
     background-color: #ff5f40!important;
     color :#fff;
 }
+/* dropzone */
+.dropzone {
+    width: 100%;
+    border: 1.7px solid #42a5f5;
+    border-style: dashed;
+    border-spacing: 2em;
+    border-radius: 0.4em;
+    cursor: pointer;
+}
+
+.dropzone-color {
+    color: #1976d2;
+}
+
+
+.dropzone-item-delete {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    padding: 0.3em 0.5em;
+    color: #f44336;
+    cursor: pointer;
+}
+
+
+.dropzone-text {
+    overflow: hidden!important;
+    text-overflow: ellipsis;
+    width: 100%;
+    white-space: nowrap;
+}
+
+.table-res {
+    overflow: auto;
+    min-height: 200px;
+}
+
+
+.opacity-1 { opacity: 1; }
